--- a/molkky_code.html
+++ b/molkky_code.html
@@ -17,7 +17,7 @@
             user-select: none; -webkit-user-select: none;
         }
         
-        /* 画面切り替え: view-sectionは初期非表示、active-viewがつくと表示 */
+        /* 画面切り替えの仕組み */
         .view-section { display: none; height: 100%; width: 100%; flex-direction: column; }
         .active-view { display: flex; }
 
@@ -32,7 +32,6 @@
         .score-btn:active { transform: scale(0.92) translateY(2px); box-shadow: 0 1px 0 rgba(0,0,0,0.3); }
         .pin-row { display: flex; justify-content: center; gap: 8px; margin-bottom: 8px; }
 
-        /* モード別色 */
         .mode-snipe .score-btn { background: radial-gradient(circle at 30% 30%, #e4c49f, #c89f72); color: #3e2723; border: 2px solid #5d4037; border-radius: 50%; }
         .mode-break .score-btn { background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; border: 1px solid #93c5fd; border-radius: 12px; }
         .btn-miss { background: linear-gradient(to bottom, #ef4444, #dc2626); box-shadow: 0 3px 0 #991b1b; }
@@ -78,7 +77,6 @@
         </div>
         <button onclick="generateDemoData()" class="mt-8 text-xs text-gray-600 underline">デモデータ生成 (テスト用)</button>
     </div>
-
     <div id="view-setup" class="view-section p-4 bg-gray-900">
         <div class="pt-12 pb-4 text-center"><h2 class="text-xl font-bold text-white tracking-widest border-b-2 border-yellow-600 inline-block pb-1">PLAYER ENTRY</h2></div>
         <div class="flex-grow overflow-y-auto space-y-3 px-2 custom-scrollbar" id="player-input-list"></div>
@@ -87,7 +85,6 @@
             <button onclick="startGame()" class="w-full py-4 bg-blue-600 text-white rounded-xl font-bold text-xl shadow-lg hover:bg-blue-500 transition">GAME START</button>
         </div>
     </div>
-
     <div id="view-game" class="view-section bg-gray-900">
         <div class="flex-grow overflow-y-auto custom-scrollbar pt-14 px-1 pb-2 bg-gray-800">
             <table class="w-full text-left border-collapse">
@@ -117,7 +114,6 @@
             <div class="mt-2 px-6"><button onclick="inputScore(0)" class="w-full py-3 btn-miss text-white font-black rounded-xl text-lg tracking-wider active:bg-red-700 transition">MISS (0)</button></div>
         </div>
     </div>
-
     <div id="view-result" class="view-section justify-center items-center p-6 text-center bg-gray-900">
         <h2 class="text-4xl text-yellow-400 font-black mb-6 tracking-tighter drop-shadow-md">GAME SET!</h2>
         <div class="w-full bg-gray-800 rounded-2xl p-4 mb-6 text-left space-y-2 shadow-lg border border-gray-700 overflow-y-auto max-h-[50vh]" id="result-list"></div>
@@ -126,7 +122,6 @@
             <button onclick="goHome(true)" class="w-full py-4 bg-gray-700 text-white rounded-xl font-bold hover:bg-gray-600 transition border border-gray-600">タイトルへ戻る</button>
         </div>
     </div>
-
     <div id="view-records" class="view-section bg-gray-900 pt-16 flex flex-col">
         <div class="px-4 pb-4 bg-gray-900 border-b border-gray-800 z-10">
             <h2 class="text-2xl font-black text-white text-center mb-1">RECORDS</h2>
@@ -155,7 +150,6 @@
         <div class="flex-grow overflow-y-auto custom-scrollbar px-4 pb-10" id="records-container">
             </div>
     </div>
-
     <script>
         const STATUS = { PLAYING: 'playing', CLEARED: 'cleared', ELIMINATED: 'eliminated' };
         let players = [], currentIndex = 0, clearOrder = [], eliminatedStack = [], currentMode = 'snipe';
@@ -426,7 +420,7 @@
                     <text x="${lx}" y="${ly+4}" text-anchor="middle" class="chart-value-text">${params[i].v}%</text>
                 </g>`;
             }
-            return `<svg viewBox="0 0 300 300" class="w-full">
+            return `<svg viewBox="-20 -20 340 340" class="w-full">
                 <circle cx="150" cy="150" r="90" fill="none" stroke="#374151"/>
                 <circle cx="150" cy="150" r="45" fill="none" stroke="#374151" stroke-dasharray="2,2"/>
                 ${lines}
