--- a/molkky_code.html
+++ b/molkky_code.html
@@ -111,6 +111,7 @@
                             <span class="mr-3">📊</span> 記録・分析
                         </button>
                     </div>
+                    <button onclick="resetAllData()" class="mt-8 text-xs text-red-500 underline font-bold">⚠️ 全データ消去 (リセット)</button>
                 </div>
             `;
         }
@@ -516,4 +517,3 @@
     </script>
 </body>
 </html>
-
